@@ -1,4 +1,4 @@
-package com.mjv.gamequiz.builders;
+package com.mjv.gamequiz.mappers;
 
 import com.mjv.gamequiz.domains.User;
 import com.mjv.gamequiz.dtos.UserDTO;
@@ -6,7 +6,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class UserMapper {
@@ -26,7 +25,7 @@ public class UserMapper {
 
     public List<UserDTO> toListDTO(List<User> modelList) {
         return modelList.stream()
-                .map(this::toDTO).collect(Collectors.toList());
+                .map(this::toDTO).toList();
     }
 
 //To ListEntity
